# agent-starter-pack

./: .gitignore  GEMINI.md  Makefile  README.md  llm.txt  pr-description.md  pyproject.toml
.cloudbuild/: scheduled-cleanup.yaml
.cloudbuild/cd/: test_e2e.yaml  test_gemini_enterprise.yaml
.cloudbuild/ci/: lint.yaml  lint_templated_agents.yaml  test.yaml  test_agent_directory.yaml  test_makefile.yaml  test_pipeline_parity.yaml  test_remote_template.yaml  test_templated_agents.yaml
.cloudbuild/terraform/: apis.tf  backend.tf  build_triggers.tf  scheduled_cleanup.tf  service_account.tf  variables.tf
.cloudbuild/terraform/vars/: env.tfvars
.github/workflows/: docs.yml
agent_starter_pack/agents/: README.md
agent_starter_pack/agents/adk_a2a_base/: README.md
agent_starter_pack/agents/adk_live/: README.md
agent_starter_pack/agents/agentic_rag/: README.md
agent_starter_pack/agents/langgraph_base/: README.md
agent_starter_pack/base_template/: Makefile  README.md  pyproject.toml
agent_starter_pack/base_template/deployment/terraform/: github.tf  iam.tf  locals.tf  log_sinks.tf  service_accounts.tf  storage.tf  variables.tf  {% if cookiecutter.cicd_runner == 'google_cloud_build' %}build_triggers.tf{% else %}unused_build_triggers.tf{% endif %}
agent_starter_pack/base_template/deployment/terraform/dev/: apis.tf  storage.tf  variables.tf
agent_starter_pack/base_template/deployment/terraform/dev/vars/: env.tfvars
agent_starter_pack/base_template/{% if cookiecutter.cicd_runner == 'github_actions' %}.github{% else %}unused_github{% endif %}/workflows/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agent_starter_pack/base_template/{% if cookiecutter.cicd_runner == 'google_cloud_build' %}.cloudbuild{% else %}unused_.cloudbuild{% endif %}/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agent_starter_pack/base_template/{{cookiecutter.agent_directory}}/app_utils/: telemetry.py  tracing.py  typing.py
agent_starter_pack/cli/: main.py
agent_starter_pack/cli/commands/: create.py  enhance.py  register_gemini_enterprise.py  setup_cicd.py
agent_starter_pack/cli/utils/: __init__.py  cicd.py  gcp.py  logging.py  register_gemini_enterprise.py  remote_template.py  template.py
agent_starter_pack/data_ingestion/: pyproject.toml
agent_starter_pack/data_ingestion/data_ingestion_pipeline/: submit_pipeline.py
agent_starter_pack/deployment_targets/cloud_run/: Dockerfile
agent_starter_pack/resources/docs/: adk-cheatsheet.md
agent_starter_pack/resources/idx/: idx-template.json
agent_starter_pack/resources/idx_ag/: idx-template.json  idx-template.nix
agent_starter_pack/utils/: generate_locks.py  lock_utils.py  watch_and_rebuild.py
agents/: README.md
agents/adk_base/: README.md
agents/adk_base/.template/: templateconfig.yaml
agents/adk_base/app/: agent.py
agents/adk_base/notebooks/: adk_app_testing.ipynb
agents/adk_base/template/: .templateconfig.yaml
agents/adk_gemini_fullstack/: README.md
agents/adk_gemini_fullstack/.template/: templateconfig.yaml
agents/adk_gemini_fullstack/app/: agent.py  config.py
agents/adk_gemini_fullstack/notebooks/: adk_app_testing.ipynb
agents/adk_gemini_fullstack/template/: .templateconfig.yaml
agents/adk_live/.template/: templateconfig.yaml
agents/adk_live/app/: agent.py
agents/agentic_rag/: README.md
agents/agentic_rag/.template/: templateconfig.yaml
agents/agentic_rag/app/: agent.py  templates.py
agents/agentic_rag/notebooks/: adk_app_testing.ipynb
agents/agentic_rag/template/: .templateconfig.yaml
agents/crewai_coding_crew/app/: agent.py
agents/crewai_coding_crew/template/: .templateconfig.yaml
agents/langgraph_base_react/: README.md
agents/langgraph_base_react/app/: agent.py
agents/langgraph_base_react/template/: .templateconfig.yaml
agents/live_api/: README.md
agents/live_api/.template/: templateconfig.yaml
agents/live_api/app/: agent.py  server.py
agents/live_api/template/: .templateconfig.yaml
docs/: deployment.md  index.md  installation.md  package-lock.json  package.json
docs/.vitepress/: config.js
docs/agents/: overview.md
docs/cli/: create.md  enhance.md  index.md  list.md  register_gemini_enterprise.md  setup_cicd.md
docs/guide/: community-showcase.md  deploy-ui.md  deployment.md  development-guide.md  getting-started.md  installation.md  observability.md  remote-templating.md  template-config-reference.md  video-tutorials.md  why_starter_pack.md
docs/remote-templates/: creating-remote-templates.md  index.md  using-remote-templates.md
my-live-agent/: Makefile  README.md  pyproject.toml
my-live-agent/deployment/: README.md
my-live-agent/deployment/cd/: deploy-to-prod.yaml  staging.yaml
my-live-agent/deployment/ci/: pr_checks.yaml
my-live-agent/deployment/terraform/: build_triggers.tf  iam.tf  service_accounts.tf  storage.tf  variables.tf
my-live-agent/frontend/: package-lock.json
my-live-agent/tests/load_test/: README.md
my-rag-agent-example/: Makefile  README.md  pyproject.toml
my-rag-agent-example/app/: agent.py  agent_engine_app.py  retrievers.py
my-rag-agent-example/app/utils/: tracing.py  typing.py
my-rag-agent-example/data_ingestion/: README.md
my-rag-agent-example/deployment/cd/: deploy-to-prod.yaml  (+1 more)
my-rag-agent-example/notebooks/: adk_app_testing.ipynb
my-rag-agent-from-gcs/: Makefile  README.md  pyproject.toml
my-rag-agent-from-gcs/app/: agent.py  agent_engine_app.py  retrievers.py
my-rag-agent-from-gcs/data_ingestion/: README.md  data_processing_pipeline.json
src/base_template/: .gitignore  GEMINI.md  Makefile  README.md  pyproject.toml
src/cli/: main.py
src/utils/: generate_locks.py  lock_utils.py
tests/cicd/: test_e2e_deployment.py  test_gemini_enterprise_registration.py
tests/fixtures/: makefile_hashes.json
tests/integration/: test_agent_directory_functionality.py  test_makefile_usability.py  test_pipeline_parity.py  test_remote_templating.py  test_template_linting.py  test_templated_patterns.py  utils.py
tests/unit/: README_MAKEFILE_TESTS.md  test_makefile_template.py
tests/utils/: get_agents.py
(+210 files in other folders)
